# TerrainTile

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/edit/: brush.rs  conform.rs  cover.rs  mod.rs  rebuild.rs  scatter.rs  spline.rs  store.rs
src/export/: classbin.rs  maskpng.rs  meshbin.rs  mod.rs  quadtree.rs
src/import/: dataset.rs  fill.rs  mod.rs  reader.rs  vrt.rs  zips.rs
src/ortho/: fetch.rs  mod.rs  nib.rs  sample.rs  source.rs
src/pipeline/: build.rs  config.rs  hash.rs  mod.rs  progress.rs  runner.rs
src/server/: api.rs  assets.rs  classes.rs  data.rs  edit.rs  events.rs  far.rs  glb.rs  inspect.rs  mod.rs  overview.rs  plots.rs  project.rs  run.rs  scatter.rs  state.rs
src/tile/: classdef.rs  classes.rs  grid.rs  masks.rs  mesh.rs  meta.rs  mod.rs
src/validate/: check.rs
tests/: edit.rs  island.rs  pipeline.rs  scatter.rs
web/: app.js  browse.js  far.js  index.html  near.js  start.js  style.css  terrain-material.js  terrain-simple.js  ttm.js  viewer.js
web/editor/: aerial.js  brush.js  classes.js  editor.js  ground.js  lasso.js  meshes.js  overlay.js  plots.js  scatter.js  sculpt.js  spline.js  toolbar.js
