[package]
name = "terraintile"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
crossbeam-channel = "0.5"
gdal = { version = "0.19", features = ["bindgen"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate", "deflate64"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
