[package]
name = "terraintile"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate", "deflate64"] }

[profile.release]
lto = "thin"
